<resources>
    <string name="app_name">Flat Fusion</string>
    <string name="welcome">Welcome</string>
    <string name="register_info">Please register yourself!</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="flat_settings">Flat Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="go_back">Go Back</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="leave_flat_share">Leave flat share</string>
    <string name="manage_flat_share">Manage flat share</string>
    <string name="create_flat_share">Create flat share</string>
    <string name="please_login_with_your_credentialsDot">Please login with your credentials.</string>
    <string name="shopping_list">Shopping List</string>
    <string name="budget">Budget</string>
    <string name="cleaning_plan">Cleaning Plan</string>
    <string name="are_you_sure_you_want_to_change_your_password">Are you sure you want to change your password?</string>
    <string name="are_you_sure_you_want_to_change_your_mail">Are you sure you want to change your mail?</string>
    <string name="enter_item_here">Enter item here</string>
    <string name="name_of_flat">Name of flat</string>
    <string name="enter_mail_here">Enter mail here</string>
    <string name="enter_flat_share_name">Enter flat share name</string>
    <string name="removed">"Removed: "</string>
    <string name="added">"Added "</string>
    <string name="enter_an_itemDot">Enter an item.</string>
    <string name="edit">Edit</string>
    <string name="enter_new_e_mail">Enter new e-mail</string>
    <string name="confirm_new_e_mail">Confirm new e-mail</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="current_e_mail">Current e-mail</string>
    <string name="current_password">Current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="grocerylist">Grocery List</string>
    <string name="grocery_n_list">Grocery\nList</string>
    <string name="budget_n_">Budget\n</string>
    <string name="cleaning_n_plan">Cleaning\nPlan</string>
    <string name="settings_n_">Settings\n</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="enter_description_here">Enter Description here</string>
    <string name="name">Name</string>
    <string name="name_of_cleaning_plan">Name of Cleaning Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_e_mail_saved">New e-mail saved</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="new_password_saved">New password saved</string>
    <string name="removedColon_">"Removed: "</string>
    <string name="uncheckedColon_">"Unchecked: "</string>
    <string name="enter_an_item_toast">Enter an item.</string>
    <string name="added_">"Added "</string>
    <string name="no_negative_amount_allowed">No negative amount allowed</string>
    <string name="_0_is_not_a_valid_expense_amount">0 is not a valid expense amount</string>
    <string name="enter_name_for_expense">Enter name for expense</string>
    <string name="empty_input_fields">\u0000</string>
    <string name="enter_number_for_expense">Enter number for expense</string>
    <string name="details">Details</string>
    <string name="add_new_expense">Add new Expense</string>
    <string name="correct_current_mail">Correct current mail</string>
    <string name="ready_to_persist_new_mail">"Ready to persist new mail "</string>
    <string name="new_mails_not_matching">New mails not matching</string>
    <string name="wrong_current_mail">Wrong current mail</string>
    <string name="enter_name_for_cleaning_plan">Enter name for cleaning plan</string>
    <string name="select_date">Select Date</string>
    <string name="saved">Saved</string>
    <string name="please_login_with_your_created_credentials">Please login with your created credentials.</string>
    <string name="please_select_date_range">Please select a date range</string>
    <string name="done">done</string>
    <string name="delete">delete</string>
    <string name="enter_shorter_name">Please enter shorter name</string>
    <string name="enter_shorter_reason">Please enter shorter reason</string>
    <string name="select_users">Please select user(s)</string>
    <string name="enter_description_for_cleaning_plan">Please enter a description</string>
    <string name="enter_shorter_description">Please enter shorter description</string>
    <string name="no_past_date_allowed">No past date(s) allowed</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-weekly</string>
    <string name="monthly">Monthly</string>
    <string name="bi_monthly">Bi-monthly</string>
    <string name="half_yearly">Half-yearly</string>
    <string name="please_select_valid_date_range">Please select a valid date range</string>
    <string name="enter_valid_first_name">Please enter valid first name</string>
    <string name="enter_valid_last_name">Please enter valid last name\n</string>
    <string name="enter_valid_mail">Please enter valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="old_new_passwords_equal">New password is the same as the old password. Please enter a new password</string>
    <string name="enter_shorter_first_name">Please enter shorter first name</string>
    <string name="enter_shorter_last_name">Please enter shorter last name</string>
    <string name="enter_shorter_password">Please enter shorter password</string>
    <string name="enter_longer_password">Please enter password with at least 9 characters</string>
    <string name="paid">paid</string>
    <string name="grocery_history">Grocery History</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_flat_share">Add flat share</string>
    <string name="description_of_flat">Description of flat</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="error_while_unchecking">Error while unchecking</string>
    <string name="registered_">Registration successful for user</string>
    <string name="changed_mail_successfully">Changed mail successfully</string>
    <string name="error_changing_mail">Error while changing mail</string>
    <string name="enter_shorter_username">Enter shorter username</string>
    <string name="passwords_not_matching">Passwords not matching</string>
    <string name="error_while_adding_">Error while adding\u0020</string>
    <string name="enter_valid_username">Please enter valid username</string>
    <string name="enter_description">Please enter a description</string>
    <string name="createdColon_">"Created: "</string>
    <string name="error_while_creating">"Error while creating "</string>
    <string name="do_you_really_want_to_leave_the_flat_share_">Do you really want to leave the flat share?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expense">Amount</string>
    <string name="reason">Reason</string>
    <string name="persons_involved">Persons involved</string>
    <string name="already_member_of_group">You are already a member of a group</string>
    <string name="emailJson">email</string>
    <string name="error_with_authentication_login_again">Error with authentication. You need to login again.</string>
    <string name="login_not_successful">Login not successful</string>
    <string name="login_successful">Login successful</string>
    <string name="username_or_password_not_correct">Username or password not correct</string>
    <string name="error_during_login">Error during login</string>
    <string name="enter_email">Enter email</string>
    <string name="join_a_group">Join a group!</string>
    <string name="join_a_group_first">Join a group first!</string>
    <string name="user_already_added">User already added</string>
    <string name="user_already_added_to_other_group">User is already added to another group</string>
    <string name="delete_flat_share_member">Delete flat share member</string>
    <string name="do_you_really_want_to_delete_this_flat_share_member_">Do you really want to delete this flat share member?</string>
    <string name="in_total_you_do_not_owe_or_get_any_money">In total you do not owe or get any money.</string>
    <string name="you_get_back_in_total">"You get back in total: "</string>
    <string name="you_owe_in_total">"You owe in total: "</string>
    <string name="you_do_not_get_any_money_back">You do not get any money back.</string>
    <string name="you_get">"You get: "</string>
    <string name="you_do_not_owe_any_money">You do not owe any money.</string>
    <string name="you_owe">"You owe: "</string>
    <string name="password_successfully_changed">Password successfully changed</string>
    <string name="password_not_changed">Changing passwords was not successful</string>
    <string name="wrong_current_password">Wrong current password</string>
</resources>