<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".controller.CreateFlatShareScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/my_primary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">


            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/house_icon" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="80dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/flat_settings"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_flat_share" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="320dp"
            android:text="@string/manage_flat_share" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_flat_share" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/personal_settings"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_e_mail" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingBottom="20dp"
                android:text="@string/create_flat_share"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1FEFF"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:hint="@string/enter_flat_share_name" />

                <View
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_marginLeft="7sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1FEFF"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/input_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:hint="@string/enter_mail_here" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="7sp"
                    android:layout_toRightOf="@+id/input_mail"
                    android:src="@drawable/add_symbol" />

            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/goBackButtonCreateFlatShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/my_primary"
                    android:drawableLeft="@drawable/go_back_icon_small"
                    android:text="@string/go_back" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/saveChangesButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/my_primary"
                    android:drawableLeft="@drawable/save_icon"
                    android:text="@string/save_changes" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>